--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ header {
 
 nav {
     height: 100%; /* 100% Full-height */   
-    width: 0; /* 0 width - change this with JavaScript */
+    width: 250px; /* Set the sidebar width */
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
@@ -86,7 +86,8 @@ nav {
     background-color: #00334f; /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 70px; /* Place content 70px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    transform: translateX(-250px); /* Start off-screen */
+    transition: transform 0.3s; /* Smooth transition for transform property */
 }
 
 /* The navigation menu links */
@@ -130,10 +131,10 @@ nav .closebtn {
     right: 0;
   }
 
-
-
-
-
+/* When the sidebar is supposed to be open, add a class with the following properties: */
+.open {
+    transform: translateX(0);
+}
 
 
 
