Altered booking.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ nav {
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #00334f; /* Black*/
+    background-color: #00334f;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 70px; /* Place content 70px from the top */
     transform: translateX(-250px); /* Start off-screen */
