--- a/css/booking.css
+++ b/css/booking.css
@@ -1,8 +1,14 @@
-
+#roomAvailability {
+    background-color: #00334f;
+}
+.booking-rooms-header h2 {
+    color: white;
+}
 
 .booking-rooms-container {
+    background-color: #ffffff;
     margin-top: 16px;
-    height: 240px; /* Adjust the height as needed */
+    height: 440px; 
     overflow-y: scroll;
     border: 1px solid #ccc; /* Just for visibility */
 }
@@ -45,4 +51,18 @@
   
   .calendar .day.unavailable {
     background-color: red;
+  }
+
+  .book-button {
+    position: absolute;
+    right: 60px;
+    border: none;
+    border-radius: 4px;
+    background-color: #00334f;
+    color: white;
+    padding: 4px;
+  }
+
+  .book-button:hover {
+    background-color: grey;
   }
