--- a/css/admin.css
+++ b/css/admin.css
@@ -1,18 +1,34 @@
 .form-container {
-    background-color: white;
+    background-color: #00334f;
+    color: white;
     padding: 16px;
     max-width: 600px;
     width: 100%;
+    height: 350px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border: 2px solid #ffc900; /* white borders on buttons */
 }
 
 .form-container h2 {
-    margin-bottom: 12px;
+    margin-bottom: 24px;
 }
 
 .form-group {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
+}
+
+.form-container button {
+    background-color: #ffc900;
+    padding: 4px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.form-container button:hover {
+    background-color: white;
 }
