--- a/css/rooms.css
+++ b/css/rooms.css
@@ -1,4 +1,10 @@
 
+.building-section {
+    border: 2px solid #ffc900; /* white borders on buttons */
+    background-color: #00334f;
+    color: white;
+}
+
 .building-section h2 {
     margin-bottom: 16px;
 }
