--- a/css/styles.css
+++ b/css/styles.css
@@ -30,16 +30,19 @@ header {
 .login {
     width: 100%;
     max-width: 80px;
-    color: #ffc900;
+    font-weight: bold;
+    color: #00334f;
     text-decoration: none; /* removes underline */
     padding: 5px 10px;
     text-align: center;
+    background-color: #ffc900;
     border: 2px solid #ffc900;
     border-radius: 5px; /* rounds off buttons corners*/
 }
 
 .login:hover {
-    background-color: #dedede; /* hovering buttons makes the background change to grey */
+    color: #ffc900;
+    background-color: #00334f; /* hovering buttons makes the background change to grey */
 }
 
 
