--- a/css/rooms.css
+++ b/css/rooms.css
@@ -1,4 +1,8 @@
 
+.main-content {
+    justify-content: space-evenly;
+}
+
 .building-section {
     border: 2px solid #ffc900; /* white borders on buttons */
     background-color: #00334f;
