--- a/css/admin.css
+++ b/css/admin.css
@@ -5,12 +5,12 @@
     max-width: 600px;
     width: 100%;
     height: 350px;
-    margin: 0 auto;
+    margin: 0 auto; /* Centers content in the middle */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 2px solid #ffc900; /* white borders on buttons */
+    border: 2px solid #ffc900;
 }
 
 .form-container h2 {
