--- a/css/booking.css
+++ b/css/booking.css
@@ -21,7 +21,7 @@
     margin-top: 16px;
     height: 440px; 
     overflow-y: scroll;
-    border: 1px solid #ccc; /* Just for visibility */
+    border: 1px solid #ccc;
 }
 
 .booking-rooms-header {
@@ -38,12 +38,12 @@
 #roomsList {
     padding: 0;
     margin: 0;
-    list-style: none; /* Removes the default list bullet points */
+    list-style: none; /* Remove list bullet points */
 }
 
 #roomsList li {
-    padding: 10px; /* Add some padding for each list item */
-    border-bottom: 1px solid #eee; /* Optional separator for each room */
+    padding: 10px; 
+    border-bottom: 1px solid #eee;
     display: flex;
     justify-content: space-between;
 }
@@ -73,18 +73,18 @@
 
 
 
-/* General Popup Styles */
+/* Popup CSS */
 .popup {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    position: fixed;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    z-index: 2; /* Sit on top */
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    z-index: 2; /* Sit on top of content */
 }
 
 /* Popup Content */
@@ -93,10 +93,10 @@
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-    max-width: 500px; /* Maximum width */
-    border-radius: 5px; /* Optional: for rounded corners */
-    z-index: 3; /* Sit on top */
+    width: 80%;
+    max-width: 500px;
+    border-radius: 4px;
+    z-index: 3; /* Sit on top of popup */
 }
 
 /* The Close Button */
@@ -127,7 +127,7 @@
     margin-top: 5px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-sizing: border-box; /* Helps include padding in the element's total width and height */
+    box-sizing: border-box;
 }
 
 #bookingForm input[type="submit"] {
