--- a/css/styles.css
+++ b/css/styles.css
@@ -219,19 +219,19 @@ section {
 
 .upperContainer {
     display: flex;
-    justify-content: space-around; /* You might want to change this to 'space-between' to add space around items */
+    justify-content: space-around;
     width: 100%;
-    margin-bottom: 20px; /* Adds margin at the bottom of the container */
+    margin-bottom: 20px;
 }
 
 #roomAvailability {
     flex: 2; /* 20% width */
-    margin-right: 10px; /* Adds margin to the right */
+    margin-right: 10px;
 }
 
 #websiteActivity {
     flex: 8; /* 80% width */
-    margin-left: 10px; /* Adds margin to the left */
+    margin-left: 10px;
 }
 
 
