--- a/css/rooms.css
+++ b/css/rooms.css
@@ -1,12 +1,13 @@
 
 .main-content {
-    justify-content: space-evenly;  
+    overflow-y: auto;
 }
 
 .building-section {
     border: 2px solid #ffc900; /* yellow borders on buttons */
     background-color: #00334f;
     color: white;
+    margin: 24px 0;
 }
 
 .building-section h2 {
